
Sun Sep  7 00:00:10 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwydgets/gwygradsphere.c (gwy_grad_sphere_get_update_policy): added
    * libgwydgets/gwyvectorshade.c (gwy_vector_shade_get_sphere_coords,
      gwy_vector_shade_get_grad_sphere): added
    * libgwydgets/gwyvectorshade.c (gwy_vector_shade_new):
      moved spherical coordinates ownership to GwyGradSphere
    * libgwydgets/gwygradsphere.c (gwy_grad_sphere_finalize,
      gwy_grad_sphere_new, gwy_grad_sphere_set_sphere_coords): fixed
      spherical coordinates reference counting

Sat Sep  6 20:56:56 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwyserializable.c (gwy_serialize_check_string):
      changed arguments to include position as the _unpack functions,
      all callers changed

Sat Sep  6 19:04:41 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwycontainer.c (gwy_container_set_object):
      fixed increasing refcount by 2 instead of 1
    * libgwyddion/gwyserializable.c (gwy_serializable_deserialize):
      fixed getting wrong type name by not offsetting by position

Sat Sep  6 15:18:30 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwytestser.c (gwy_test_ser_finalize):
      added

Tue Sep  2 22:50:08 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwyserializable.c (gwy_serialize_check_string),
      libgwyddion/gwycontainer.c (gwy_container_deserialize):
      fixed always checking string from the begining instead from *position
    * libgwyddion/gwyserializable.c (gwy_serialize_unpack_string,
      gwy_serialize_check_string): fixed bogus new position computation

Tue Sep  2 22:16:55 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwycontainer.c (gwy_container_deserialize):
      implemented

Tue Sep  2 21:46:20 CEST 2003  David Necas (Yeti) <yeti@physics.muni.cz>
    * libgwyddion/gwycontainer.c (gwy_container_serialize):